--- a/docker-compose/media-server/docker-compose.yml
+++ b/docker-compose/media-server/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - traefik.http.routers.sonarr.entrypoints=websecure
       - traefik.http.routers.sonarr.tls=true
       - traefik.http.services.sonarr.loadbalancer.server.port=8989
+      - traefik.docker.network=proxy
     networks:
       - proxy
       - mediaServer
@@ -59,6 +60,7 @@ services:
       - traefik.http.routers.radarr.entrypoints=websecure
       - traefik.http.routers.radarr.tls=true
       - traefik.http.services.radarr.loadbalancer.server.port=7878
+      - traefik.docker.network=proxy
     networks:
       - proxy
       - mediaServer
@@ -89,6 +91,7 @@ services:
       - traefik.http.services.qbittorrent.loadbalancer.passhostheader=false
       - traefik.http.routers.qbittorrent.entrypoints=websecure
       - traefik.http.routers.qbittorrent.tls=true
+      - traefik.docker.network=proxy
     depends_on:
       - vpn
     networks:
@@ -118,6 +121,7 @@ services:
       - traefik.http.services.jellyfin.loadbalancer.server.port=8096
       - traefik.http.routers.jellyfin.entrypoints=websecure
       - traefik.http.routers.jellyfin.tls=true
+      - traefik.docker.network=proxy
     networks:
       - proxy
       - mediaServer
@@ -197,6 +201,8 @@ services:
       - traefik.http.routers.rss-router.rule=Host(`rss.${DOMAIN}`)
       - traefik.http.routers.rss-router.entrypoints=websecure
       - traefik.http.routers.rss-router.tls=true
+      - traefik.http.services.rss-router.loadbalancer.server.port=4000
+      - traefik.docker.network=proxy
       # - traefik.http.routers.qbittorrent-router.rule=Host(`qbittorrent.${DOMAIN}`)
       # - traefik.http.services.qbittorrent-router.loadbalancer.server.port=8080
       # - traefik.http.routers.qbittorrent-router.entrypoints=websecure
