--- a/docker-compose/monitoramento/docker-compose.yml
+++ b/docker-compose/monitoramento/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+---
 services:
   grafana:
     image: grafana/grafana
@@ -15,6 +15,7 @@ services:
       - traefik.http.routers.grafana.entrypoints=websecure
       - traefik.http.routers.grafana.tls=true
       - traefik.http.services.grafana.loadbalancer.server.port=3000
+      - traefik.docker.network=proxy
     volumes:
       - ${STORAGE}/grafana/data/:/var/lib/grafana
     networks:
@@ -22,7 +23,7 @@ services:
       - monitoramento
 
   loki:
-    image: grafana/loki:2.9.2
+    image: grafana/loki
     container_name: loki
     restart: unless-stopped
     # ports:
@@ -80,6 +81,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
+    environment:
+      - WATCHTOWER_CLEANUP=true
 
   telegraf:
     image: telegraf
@@ -115,6 +118,7 @@ services:
       - traefik.http.routers.influxdb.entrypoints=websecure
       - traefik.http.routers.influxdb.tls=true
       - traefik.http.services.influxdb.loadbalancer.server.port=8086
+      - traefik.docker.network=proxy
     networks:
       - proxy
       - monitoramento
