--- a/docker-compose/rede/docker-compose.yml
+++ b/docker-compose/rede/docker-compose.yml
@@ -1,31 +1,5 @@
 ---
 services:
-  pihole:
-    container_name: pihole
-    image: pihole/pihole:latest
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - '53:53/tcp'
-      - '53:53/udp'
-      - '8099:8099/tcp'
-    environment:
-      TZ: ${TZ}
-      WEBPASSWORD: ${WEBPASSWORD}
-      WEB_PORT: 8099
-    volumes:
-      - ${STORAGE}/piholeConfig:/etc/pihole
-      - ${STORAGE}/piholeDnsmasq.d:/etc/dnsmasq.d
-    restart: unless-stopped
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.pihole.rule=Host(`pihole.${DOMAIN}`)
-      - traefik.http.routers.pihole.entrypoints=websecure
-      - traefik.http.routers.pihole.tls=true
-      - traefik.http.services.pihole.loadbalancer.server.port=8099
-    networks:
-      - proxy
-
   traefik-reverse-proxy:
     restart: unless-stopped
     image: traefik:latest
@@ -51,25 +25,13 @@ services:
       - 'traefik.http.routers.traefik-secure.tls.domains[0].main=${DOMAIN}'
       - 'traefik.http.routers.traefik-secure.tls.domains[0].sans=*.${DOMAIN}'
       - 'traefik.http.routers.traefik-secure.service=api@internal'
-    # command:
-    # - --api.insecure=true
-    # - --providers.docker=true
-    # - --providers.docker.exposedbydefault=false
-    # - --entrypoints.web.address=:80
-    # - --entrypoints.websecure.address=:443
-    # - --entrypoints.web.http.redirections.entryPoint.to=websecure
-    # - --entrypoints.web.http.redirections.entryPoint.scheme=https
-    # - --entrypoints.web.http.redirections.entrypoint.permanent=true
-    # - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
-    # - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
-    # - --certificatesresolvers.letsencrypt.acme.email=${EMAIL}
-    # - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
     ports:
       - '80:80'
       - '443:443'
       - '8101:8080'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      # - ${STORAGE}/traefik/letsencrypt:/letsencrypt
       - ${STORAGE}/traefik/config/traefik.yml:/traefik.yml:ro
       - ${STORAGE}/traefik/config/acme.json:/acme.json
     networks:
