--- a/docker-compose/torrent/docker-compose.yml
+++ b/docker-compose/torrent/docker-compose.yml
@@ -9,6 +9,7 @@ services:
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
+    network_mode: 'service:gluetun'
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -24,13 +25,25 @@ services:
       resources:
         limits:
           cpus: '0.30'
+
+  gluetun:
+    container_name: gluetun
+    image: qmcgaw/gluetun
+    cap_add:
+      - NET_ADMIN
+    environment:
+      - VPN_SERVICE_PROVIDER=protonvpn
+      - VPN_TYPE=wireguard
+      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
+      - SERVER_COUNTRIES=${SERVER_COUNTRIES}
+    restart: unless-stopped
     labels:
       - traefik.enable=true
-      - traefik.http.routers.qbittorrent.rule=Host(`qbittorrent.${DOMAIN}`)
-      - traefik.http.services.qbittorrent.loadbalancer.server.port=8080
-      - traefik.http.services.qbittorrent.loadbalancer.passhostheader=false
-      - traefik.http.routers.qbittorrent.entrypoints=websecure
-      - traefik.http.routers.qbittorrent.tls=true
+      - traefik.http.routers.gluetun.rule=Host(`qbittorrent.${DOMAIN}`)
+      - traefik.http.services.gluetun.loadbalancer.server.port=8080
+      - traefik.http.services.gluetun.loadbalancer.passhostheader=false
+      - traefik.http.routers.gluetun.entrypoints=websecure
+      - traefik.http.routers.gluetun.tls=true
       - traefik.docker.network=proxy
     networks:
       - proxy
