--- a/docker-compose/database/docker-compose.yml
+++ b/docker-compose/database/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   database:
-    image: 'postgres'
+    image: postgres:16
     container_name: database
     restart: unless-stopped
     ports:
