add mangas ao jellyfin

--- a/docker-compose/media-server/docker-compose.yml
+++ b/docker-compose/media-server/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       - ${DATA}/movies:/data/movies
       - ${DATA}/tvseries:/data/tvshows
       - ${DATA}/music:/data/music
+      - ${DATA}/mangas:/data/mangas
       - ${DATA}/downloader/downloads:/downloaders
     ports:
       - 8096:8096
