--- a/docker-compose/influx/docker-compose.yml
+++ b/docker-compose/influx/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - influx
 
   telegraf:
-    image: telegraf_local
+    # image: telegraf_local
     container_name: telegraf
     build:
       context: .
