--- a/docker-compose/media-server/docker-compose.yml
+++ b/docker-compose/media-server/docker-compose.yml
@@ -120,9 +120,11 @@ services:
       - traefik.http.routers.lidarr.entrypoints=websecure
       - traefik.http.routers.lidarr.tls=true
       - traefik.http.services.lidarr.loadbalancer.server.port=8686
+      - traefik.docker.network=proxy
     networks:
       - proxy
       - torrent
+      - mediaServer
 
   jackett:
     image: lscr.io/linuxserver/jackett:latest
@@ -141,5 +143,7 @@ services:
       - traefik.http.routers.jackett.entrypoints=websecure
       - traefik.http.routers.jackett.tls=true
       - traefik.http.services.jackett.loadbalancer.server.port=9117
+      - traefik.docker.network=proxy
     networks:
       - proxy
+      - mediaServer
